<resources>
    <string name="app_name">Finanzas en Casa</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenida">¡Bienvenidx!</string>
    <string name="bienvenida2">Ingrese a continuación sus credenciales</string>
    <string name="olvidastePass">¿Olvidaste tu contraseña?</string>
    <string name="loginRedes">O iniciar con</string>
    <string name="descripcionFace">Iniciar con Facebook</string>
    <string name="descripcionGoogle">Iniciar con Google</string>
    <string name="descripcionLogo">Logo aplicación</string>
    <string name="descripcionTwt">Iniciar con Twitter</string>
    <string name="register_user_img">Registrar usuario imagen</string>
    <string name="register_user_1">Complete la información solicitada</string>
    <string name="register_nombre">Nombre</string>
    <string name="register_apellido">Apellido</string>
    <string name="register_edad">Edad</string>
    <string name="rbFemenino">Femenino</string>
    <string name="rbMasculino">Masculino</string>
    <string name="rbOtro">Otro</string>
    <string name="txtGenero">Género:</string>
    <string name="RegisterPassConfirm">Confirme su contraseña</string>
    <string name="terminosYcondiciones">Acepto los términos y condiciones</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="addingNuevoRegistro">Creando nuevo usuario...</string>
    <string name="pleaseWait">Por favor espere a que el proceso haya finalizado.</string>
    <string name="by">by</string>
    <string name="creador">Javiera Venegas</string>
    <string name="ingresosTusIngresos">Ingresos</string>
    <string name="add">Añadir</string>
    <string name="gastosTusGastos">Gastos</string>
    <string name="TusEstadisticas">Tus estadísticas</string>
    <string name="presupuesto_actual">Presupuesto actual</string>
    <string name="cotizar">Cotizar</string>
    <string name="inversiones">Inversiones</string>
    <string name="cat">Categorías</string>
    <string name="saveConfig">Guardar cambios</string>
    <string name="infoConfig">Información de la cuenta</string>
    <string name="cerrarsesion">Cerrar sesión</string>
</resources>