<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/naranjaest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="386dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOlvidastePass"
        app:srcCompat="@drawable/division" />

    <ImageButton
        android:id="@+id/btnface"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="73dp"
        android:background="@drawable/btn_social"
        android:contentDescription="@string/descripcionFace"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btngoogle"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/face_logo" />

    <ImageButton
        android:id="@+id/btngoogle"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="73dp"
        android:background="@drawable/btn_social"
        android:contentDescription="@string/descripcionGoogle"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/google_logo2" />

    <TextView
        android:id="@+id/txtBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/bienvenida"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin" />

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/descripcionLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotipo_login" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="347dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textSize="20sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        android:textColor="@color/naranjaest"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:textSize="18sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/naranjaest"
        android:text="@string/registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/bienvenida2"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBienvenida" />

    <TextView
        android:id="@+id/txtOlvidastePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/olvidastePass"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarse" />

    <ImageButton
        android:id="@+id/btntwt"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="73dp"
        android:background="@drawable/btn_social"
        android:contentDescription="@string/descripcionTwt"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btngoogle"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/twitter_logo" />

    <TextView
        android:id="@+id/txtredes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/loginRedes"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOlvidastePass" />

</androidx.constraintlayout.widget.ConstraintLayout>