<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/naranjaest"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/naranjaest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegistrarseActivity">


        <EditText
            android:id="@+id/txtRegisterPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterCorreo" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/register_user_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/register_user" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:text="@string/register_user_1"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_nombre"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_apellido"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

        <EditText
            android:id="@+id/intEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_edad"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intEdad">

            <RadioButton
                android:id="@+id/rbFemenino"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:text="@string/rbFemenino"
                app:buttonTint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:text="@string/rbMasculino"
                app:buttonTint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbOtro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbOtro"
                app:buttonTint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="305dp"
            android:text="@string/txtGenero"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intEdad" />

        <EditText
            android:id="@+id/txtRegisterCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/txtRegisterPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/RegisterPassConfirm"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterPass2" />

        <CheckBox
            android:id="@+id/ckbCondiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:buttonTint="@color/white"
            android:text="@string/terminosYcondiciones"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterPassConfirm" />

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/white"
            android:text="@string/btnAceptar"
            android:textColor="@color/naranjaest"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ckbCondiciones" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>