<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/naranjaest"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/naranjaest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Configuraciones">

        <EditText
            android:id="@+id/txtPassConfig"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCorreoConfig" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/register_user_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/config_user" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:text="@string/infoConfig"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/txtNombreConfig"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_nombre"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/txtApellidoConfig"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_apellido"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreConfig" />

        <EditText
            android:id="@+id/intEdadConfig"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/register_edad"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtApellidoConfig" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intEdadConfig">

            <RadioButton
                android:id="@+id/rbFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbFemenino"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:buttonTint="@color/white" />

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbMasculino"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:buttonTint="@color/white" />

            <RadioButton
                android:id="@+id/rbOtro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbOtro"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:buttonTint="@color/white" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="280dp"
            android:text="@string/txtGenero"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intEdadConfig" />

        <EditText
            android:id="@+id/txtCorreoConfig"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


        <Button
            android:id="@+id/btnSaveConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/saveConfig"
            android:textColor="@color/naranjaest"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassConfig" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>